# erisbot

./: erisbot.cabal
src/: Erisbot.hs  Main.hs
src/Erisbot/: Commands.hs  Config.hs  Plugins.hs  Types.hs
src/Erisbot/Plugins/: Sed.hs  URL.hs  Url.hs
