Name: erisbot
Version: 0.0
Cabal-Version: >= 1.6
License: BSD3
License-File: LICENSE
Author: Adam Curtis
Maintainer: acurtis@spsu.edu
Homepage: https://github.com/kallisti-dev/erisbot
Category: Network, IRC
Synopsis: the discordian IRC bot
Build-type: Simple
Description:
        an IRC bot written in concurrent Haskell

source-repository head
  type: git
  location: git://github.com/kallisti-dev/erisbot.git

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:    base == 4.*
                  , attoparsec
                  , bytestring
                  , irc-bytestring
                  , network
                  , monad-control
                  , transformers
                  , lens
                  , mtl
                  , unordered-containers
                  , xml-conduit
                  , html-conduit
                  , text


  exposed-modules: Erisbot
                   Erisbot.Types

executable erisbot
  hs-source-dirs: src
  ghc-options: -Wall -threaded
  main-is: Main.hs
  build-depends:    base == 4.*
                  , attoparsec
                  , bytestring
                  , irc-bytestring
                  , network
                  , monad-control
                  , lens >= 3.8
                  , mtl
                  , unordered-containers
                  , http-conduit
                  , web-encodings
                  , lifted-base



