Name: erisbot
Version: 0.0
Cabal-Version: >= 1.6
License: BSD3
License-File: LICENSE
Author: Adam Curtis
Maintainer: acurtis@spsu.edu
Homepage: https://github.com/kallisti-dev/erisbot
Category: Network, IRC
Synopsis: the discordian IRC bot
Build-type: Simple
Description:
        an IRC bot written in concurrent Haskell

source-repository head
  type: git
  location: git://github.com/kallisti-dev/erisbot.git

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:    base == 4.*
                  , attoparsec
                  , bytestring
                  , irc-bytestring
                  , network
                  , monad-control
                  , transformers
                  , lens
                  , mtl
                  , containers
                  , unordered-containers
                  , xml-conduit
                  , html-conduit
                  , http-conduit
                  , lifted-base                            
                  , text
                  , process
                  , filepath
                  , plugins


  exposed-modules: Erisbot
                   Erisbot.Commands
                   Erisbot.Plugins
                   Erisbot.Plugins.URL
                   Erisbot.Plugins.Sed
                   Erisbot.Types
